<resources>
    <string name="app_name">Shope</string>
    <string name="all_you_need_in_one_palace">All You need In One Palace</string>
    <string name="cataogry">Cataogry</string>
    <string name="show_all">Show all</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">UserName</string>
    <string name="password">password</string>
    <string name="email_or_phone">email or phone</string>
    <string name="refural">refural</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catogry_name">catogry_name</string>
    <string name="all_product_you_need">All Product You Need</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_done">Buy done</string>
    <string name="add_payment">Add Payment</string>
    <string name="username_">Username :</string>
</resources>