<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.homeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/home_slgn"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/slgn_home"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/cart_btn"
                    android:layout_width="50dp"

                    android:layout_height="50dp"

                    android:src="@drawable/cart_xml" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/referal_edtx_sign_up"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/refural"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="#127bf3"
                    app:boxStrokeErrorColor="#FA0303"
                    app:endIconCheckable="true"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="#FF5722"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/search_xml">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="text"
                        android:paddingTop="5dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/catogry_text_unused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/changa_para"
                android:text="@string/cataogry"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_slgn" />

            <TextView
                android:id="@+id/showAll_text_unused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-10dp"
                android:fontFamily="@font/changa_para"
                android:text="@string/show_all"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_slgn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_frag_cat_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showAll_text_unused" />

            <ImageView
                android:id="@+id/panner_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/product_po"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_frag_cat_rec" />


            <TextView
                android:id="@+id/product_slgn_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/changa_para"
                android:text="@string/all_product_you_need"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panner_home" />


            <TextView
                android:id="@+id/showAll_text_unused_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/changa_para"
                android:text="@string/show_all"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/panner_home" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_frag_product_rec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_slgn_all" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</FrameLayout>